--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,4 @@
-web: gunicorn app:app
+web: gunicorn apiProject.wsgi
+release: python manage.py makemigrations --noinput
+release: python manage.py collectstatic --noinput
+release: python manage.py migrate --noinput
