--- a/backend/apiProject/Procfile
+++ b/backend/apiProject/Procfile
@@ -1,2 +1,2 @@
-web: gunicorn --pythonpath apiProject apiProject.wsgi
+web: gunicorn --pythonpath apiProject.apiProject.wsgi
 web: python manage.py runserver
